--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,18 +17,17 @@
         </mat-menu> -->
         <h1 style="margin-left: 50px;  color: white; margin-top: 7px; font-size: 30px;"><b><i>Ecom-Dashboard</i></b>
         </h1>
-        <button style="margin-left: 74%;width: 70px;font-size: 17px;border-radius: 10px; height: 40px;margin-top: 4px;"
-            (click)="logout()">Logout</button>
+        <button type="button" class="btn btn-warning" style="margin-left: 78%;height: 40px;margin-top: 4.3px;" (click)="logout()">Logout</button>
     </div>
 
-    <div style="height: 100vh; width: 100vw; overflow-y: hidden;overflow-x: hidden;background-color: bisque;">
-        <button style="float: right; background-color: rgb(68, 68, 230);height: 40px;margin-top: 30px;margin-right: 30px; font-size: 18px; color: aqua;" routerLink="/parentProduct">+Add
+    <div style=" overflow-y: hidden;overflow-x: hidden;background-color: bisque;" *ngIf="addButton">
+        <button style="float: right; background-color: rgb(68, 68, 230);height: 40px;margin-top: 30px;margin-right: 30px; font-size: 18px; color: aqua; " routerLink="/parentProduct" >+Add
             New</button>
     </div>
-    <div style="margin-top: -47%;display: flex;flex-wrap: wrap;padding: 30px;" >
-        <div style="display: flex;justify-content: center;flex-direction: column;margin-top: 30px;" *ngFor="let item of parentDataArray" (click)="getSubProduct(item.id)">
-            <img src={{item.imageUrl}} style="height: 250px; margin-left: 50px; width: 300px;">
-           <h1 style="margin-left: 130px;font-size: 20px;color: steelblue;">{{item.productName}}</h1>
+    <div style="display: flex;flex-wrap: wrap;padding: 30px;" >
+        <div style="display: flex;justify-content: center;flex-direction: column;margin-top: 30px;align-items: center;margin: 50px;" *ngFor="let item of parentDataArray" (click)="getSubProduct(item.id)">
+            <img src={{item.imageUrl}} style="height: 200px; width: 200px;border-radius: 50%;">
+           <h1 style="font-size: 20px;color: steelblue;">{{item.productName}}</h1>
         </div>
         <!-- <div>
             <img src="../../assets/userlogo.png" style="height: 250px;margin-left: 20px;">
