--- a/src/app/login/login-component/login-component.component.html
+++ b/src/app/login/login-component/login-component.component.html
@@ -8,7 +8,7 @@
             style="display: flex;flex-direction: column; background-color: whitesmoke; padding: 30px; border-radius: 20px;box-shadow: 4px 10px 4px gray;">
             <input type="text"
                 style="width: 300px; background-color: transparent; border-top: none; border-left: none; border-right: none; height: 40px; color: black;font-size: 15px; outline: none; border-bottom: 2px solid #1a1a1d;"
-                placeholder="Username" #username="ngModel" [(ngModel)]="userLogin.username" name="username">
+                placeholder="Email" #username="ngModel" [(ngModel)]="userLogin.username" name="username">
             <input type="password"
                 style="width: 300px; background-color: transparent; border-top: none; border-left: none; border-right: none; height: 40px; color: black;font-size: 15px; margin-top: 30px; outline: none;border-bottom: 2px solid #1a1a1d;"
                 placeholder="Password" #password="ngModel" [(ngModel)]="userLogin.password" name="password">
