--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,6 +1,10 @@
 <div style="height: 100vh; width: 100vw; background-color: bisque;overflow-y: hidden;">
-    <div style="height: 6%; width: 100%;background-color: blue;">
-        <h1 style="color: white;font-size: 30px;padding: 10px;"><b><i>{{subproductName}}</i></b></h1>
+    <div style="width: 10%;margin-left: 20px;margin-top: 10px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/93/93634.png" style="width: 40px; height: 40px;" (click)="backToSubproducts()">
+    </div>
+    <div style="height: 6.5%; width: 100%;background-color: rgb(99, 99, 168);margin-top: -55px;text-align: center;">
+        
+        <h1 style="color: white;font-size: 30px;padding: 10px;margin-left: 60px;margin-top: 5px;"><b><i>{{subproductName}}</i></b></h1>
     </div>
     <div style="padding: 10px;">
         <button
