--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div style="height: 100vh; width: 100vw;overflow-x: hidden;background-color: bisque;">
 
     <div
-        style="background-color: blue; width: 100%; height: 50px; overflow-x: hidden; display: flex; flex-direction: row; overflow-y: hidden;">
+        style="background-color:rgb(99, 99, 168); width: 100%; height: 50px; overflow-x: hidden; display: flex; flex-direction: row; overflow-y: hidden;">
         <!-- <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu"
             style="border: none; background-color: blue; height: 70px; margin-left: 10px; margin-top: -9px;">
             <mat-icon style="color: black; ">menu</mat-icon>
