--- a/src/app/sub-product/sub-product.component.html
+++ b/src/app/sub-product/sub-product.component.html
@@ -1,18 +1,25 @@
 <div style="height: 100vh; width: 100vw; background-color: bisque;overflow-x: hidden;">
-    <div style="width: 100vw; height: 6.5%;background-color: blue;text-align: center;overflow-y: hidden;">
+    <div style="width: 10%;margin-left: 20px;margin-top: 10px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/93/93634.png" style="width: 40px; height: 40px;" routerLink="/dashboard">
+    </div>
+    <div style="width: 100vw; height: 6.5%;background-color: rgb(99, 99, 168);text-align: center;overflow-y: hidden;margin-top: -50px;">
+        
         <h1 style="font-size: 30px; margin-top: 8px;color: azure;"><b><i>{{parentProductName}}</i></b></h1>
-        <button type="button" class="btn btn-warning" style="float: right;margin-top: -45px;margin-right: 4px;" (click)="logout()">Logout</button>
-        <button type="button" class="btn btn-warning" style="float: right;margin-top: -45px;margin-right: 100px;" routerLink="/dashboard">Home</button>
+        <button type="button" class="btn btn-warning" style="float: right;margin-top: -45px;margin-right: 4px;"
+            (click)="logout()">Logout</button>
+        <button type="button" class="btn btn-warning" style="float: right;margin-top: -45px;margin-right: 100px;"
+            routerLink="/dashboard">Home</button>
     </div>
     <div *ngIf="addButton">
         <button
             style="float: right;height: 40px;width: 100px;border-radius: 7px;margin-top: 5px;background-color: cadetblue;margin-right: 10px;"
             (click)="addSubProduct()">+Add New</button>
     </div>
-    <div style="display: flex;flex-wrap: wrap;padding: 30px;" >
-        <div style="display: flex;justify-content: center;flex-direction: column;margin-top: 30px;align-items: center;margin: 50px;" *ngFor="let item of subProductList" (click)="getProducts(item.id)" >
+    <div style="display: flex;flex-wrap: wrap;padding: 30px;">
+        <div style="display: flex;justify-content: center;flex-direction: column;margin-top: 30px;align-items: center;margin: 50px;"
+            *ngFor="let item of subProductList" (click)="getProducts(item.id)">
             <img src={{item.imageUrl}} style="height: 200px; width: 200px;border-radius: 50%;">
-           <h1 style="font-size: 20px;color: steelblue;"><b>{{item.subProductName}}</b></h1>
+            <h1 style="font-size: 20px;color: steelblue;"><b>{{item.subProductName}}</b></h1>
         </div>
     </div>
 </div>
