--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
         <h1 style="margin-left: 50px;  color: white; margin-top: 7px; font-size: 30px;"><b><i>Ecom-Dashboard</i></b>
         </h1>
         <!-- <div style="background-color: aqua;float: right;margin-top: -4%;"> -->
-            <mat-icon style="float: right;margin-right: 170px;margin-top: -43px; transform: scale(1.5);color:rgb(247, 187, 77);">shopping_cart</mat-icon>
+            <mat-icon style="float: right;margin-right: 170px;margin-top: -43px; transform: scale(1.5);color:rgb(247, 187, 77);" routerLink="/cart">shopping_cart</mat-icon>
             <button type="button" class="btn btn-warning" style="margin-top: -50px;float: right;margin-right: 54px;"
                 (click)="logout()">Logout</button>
         <!-- </div> -->
