--- a/src/app/sub-product/sub-product.component.html
+++ b/src/app/sub-product/sub-product.component.html
@@ -5,7 +5,7 @@
     <div style="width: 100vw; height: 6.5%;background-color: rgb(99, 99, 168);text-align: center;overflow-y: hidden;margin-top: -50px;">
         
         <h1 style="font-size: 30px; margin-top: 8px;color: azure;"><b><i>{{parentProductName}}</i></b></h1>
-        <mat-icon style="float: right;margin-right: 270px;margin-top: -37px; transform: scale(1.5);color:rgb(247, 187, 77);">shopping_cart</mat-icon>
+        <mat-icon style="float: right;margin-right: 270px;margin-top: -37px; transform: scale(1.5);color:rgb(247, 187, 77);" routerLink="/cart">shopping_cart</mat-icon>
         <button type="button" class="btn btn-warning" style="float: right;margin-top: -45px;margin-right: 60px;"
             (click)="logout()">Logout</button>
         <button type="button" class="btn btn-warning" style="float: right;margin-top: -45px;margin-right: 160px;"
