--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -7,17 +7,25 @@
 
         <h1 style="color: white;font-size: 30px;padding: 10px;margin-left: 60px;margin-top: 5px;"><b><i></i></b></h1>
         <mat-icon
-            style="float: right;margin-right: 200px;margin-top: -20px; transform: scale(1.5);color:rgb(247, 187, 77);">shopping_cart</mat-icon>
-        <button type="button" class="btn btn-warning"
-            style="float: right;margin-top: -27px;margin-right: 60px;">Logout</button>
+            style="float: right;margin-right: 200px;margin-top: -20px; transform: scale(1.5);color:rgb(247, 187, 77);"
+            routerLink="/cart">shopping_cart</mat-icon>
+        <button type="button" class="btn btn-warning" style="float: right;margin-top: -27px;margin-right: 60px;"
+            (click)="logout()">Logout</button>
     </div>
-    <div style="width: 40%;height: 50%;margin-left: 28%;">
+    <div style="width: 40%;max-height: 40%;margin-left: 30%;">
         <div (mouseover)="showArrow()" (mouseleave)="hiddenarrow()">
-            <img src={{imageName}} style="width: 60%;margin-left: 20%;margin-top: 10px;">
+            <img src={{imageName}} style="max-width: 350px;margin-left: 20%;margin-top: 10px;">
             <mat-icon style="transform: scale(4.6);color: orange;margin-left: -29px;" *ngIf="arrowShow"
                 (click)="getNextImage()">keyboard_arrow_right</mat-icon>
-            <mat-icon style="transform: scale(4.6);color: orange;margin-left: -58.2%;margin-top: 10px;"
+            <mat-icon style="transform: scale(4.6);color: orange;margin-left: -50.4%;margin-top: 10px;"
                 *ngIf="arrowShow" (click)="getPreviousImage()">keyboard_arrow_left</mat-icon>
+            <div style="display: flex; justify-content: center;margin-top: 10px;">
+                <h3 style="font-size: 30px;">{{productName}}</h3>
+
+            </div>
+            <div style="display: flex; justify-content: center;">
+                <h2>Price: ₹{{price}}</h2>
+            </div>
         </div>
         <!-- <div style="margin-top: -62%;margin-left: 75%;">
             <mat-icon style="transform: scale(1.6);color: red;">favorite</mat-icon>
@@ -25,21 +33,21 @@
         <!-- <div style="margin-left: 62.6%;margin-top: 12%;" *ngIf="arrowShow">
             <mat-icon style="transform: scale(2.9);color: orange;">keyboard_arrow_right</mat-icon>
         </div> -->
-        <div style="display: flex; justify-content: center;margin-top: 10px;">
-            <h3 style="font-size: 30px;">{{productName}}</h3>
+
+        <div style="display: flex; flex-direction: row;justify-content: center;margin-top: 10px;">
+            <button style="height: 45px;font-size: 20px;background-color: salmon;border-radius: 10px;width: 250px;"
+                (click)="addToCart()">
+                <mat-icon>add_shopping_cart</mat-icon>Add To Cart</button>
 
         </div>
-        <div style="display: flex; justify-content: center;">
-            <h2>Price: ₹{{price}}</h2> 
-        </div>
-        <div>
+        <div style="display: flex;margin-top: 10px;justify-content: center;">
             <button
-                style="height: 45px;font-size: 20px;background-color: salmon;border-radius: 10px;margin-left: 160px;margin-top: 30px;">
-                <mat-icon>add_shopping_cart</mat-icon>Add To Cart</button>
-            <button
-                style="height: 45px;font-size: 20px;background-color: salmon;border-radius: 10px;margin-left: 70px;margin-top: 30px;width: 150px;">
+                style="height: 45px;font-size: 20px;background-color: salmon;border-radius: 10px;width: 150px;">
                 <mat-icon> monetization_on</mat-icon>Buy Now</button>
         </div>
+
     </div>
+
+
 
 </div>
