--- a/src/app/cart-component/cart-component.component.html
+++ b/src/app/cart-component/cart-component.component.html
@@ -20,11 +20,11 @@
             <img src={{item.productImage}} style="height: 80px">
             <div style="margin-top: 9px;">
                 <div style="display: flex;justify-content: center;">
-                    <button style="width: 80px;height: 30px;border-radius: 16px;">Buy Now</button>
+                    <button style="width: 80px;height: 30px;border-radius: 16px;background-color: aquamarine;">Buy Now</button>
 
                 </div>
                 <div style="display: flex;justify-content: center;margin-top: 10px;">
-                    <button style="width: 140px;height: 30px;border-radius: 16px;" (click)="removeFromCart(item.id)">Remove From Cart</button>
+                    <button style="width: 140px;height: 30px;border-radius: 16px;background-color: rgb(223, 166, 61)" (click)="removeFromCart(item.id)">Remove From Cart</button>
                 </div>
             </div>
 
