--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,16 +1,13 @@
-<div style="height: 100vh; width: 100vw; background-color: bisque;overflow-x: hidden;">
-    <div style="width: 10%;margin-left: 20px;margin-top: 10px;">
-        <img src="https://cdn-icons-png.flaticon.com/512/93/93634.png" style="width: 40px; height: 40px;"
+<div class="main_div">
+    <div class="back_button_div">
+        <img src="https://cdn-icons-png.flaticon.com/512/93/93634.png" class="back_button_image"
             (click)="backToProductPage()">
     </div>
-    <div style="height: 6.5%; width: 100%;background-color: rgb(99, 99, 168);margin-top: -55px;text-align: center;">
+    <div class="header_div">
 
-        <h1 style="color: white;font-size: 30px;padding: 10px;margin-left: 60px;margin-top: 5px;"><b><i></i></b></h1>
-        <mat-icon
-            style="float: right;margin-right: 200px;margin-top: -20px; transform: scale(1.5);color:rgb(247, 187, 77);"
-            routerLink="/cart">shopping_cart</mat-icon>
-        <button type="button" class="btn btn-warning" style="float: right;margin-top: -27px;margin-right: 60px;"
-            (click)="logout()">Logout</button>
+
+        <mat-icon class="cart_icon" routerLink="/cart">shopping_cart</mat-icon>
+        <button type="button" class="logout_button" (click)="logout()">Logout</button>
     </div>
     <div style="width: 40%;max-height: 40%;margin-left: 30%;display: flex;justify-content: center;">
         <div (mouseover)="showArrow()" (mouseleave)="hiddenarrow()">
