--- a/src/app/sub-product/sub-product.component.css
+++ b/src/app/sub-product/sub-product.component.css
@@ -3,4 +3,80 @@
     justify-content: center;
     width: 120px;
   }
+.main_div{
+  height: 100vh; 
+  width: 100vw; 
+  background-color: bisque;
+  overflow-x: hidden;
+}
 
+.back_button_div{
+  width: 10%;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.back_button_image{
+  width: 40px; 
+  height: 40px;
+}
+
+.name_cart_logout_div{
+  width: 100vw; 
+  height: 6.5%;
+  background-color: rgb(99, 99, 168);
+  text-align: center;
+  overflow-y: hidden;
+  margin-top: -50px;
+}
+
+.product_heading{
+  font-size: 30px; 
+  margin-top: 8px;
+  color: azure;
+}
+
+.maticon_cart{
+  float: right;
+  margin-right: 270px;
+  margin-top: -37px; 
+  transform: scale(1.5);
+  color:rgb(247, 187, 77);
+}
+
+.add_new_button{
+  float: right;
+  height: 40px;
+  width: 100px;
+  border-radius: 7px;
+  margin-top: 5px;
+  background-color: cadetblue;
+  margin-right: 40px;
+}
+
+.item_upper_div{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 4%;
+  width: 100%;
+}
+
+.item_main_div{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 40px;
+  align-items: center;
+  margin: 50px;
+}
+
+.item_image{
+  height: 200px; 
+  width: 200px;
+  border-radius: 50%;
+}
+
+.item_name{
+  font-size: 20px;
+  color: steelblue;
+}
