--- a/src/app/cart-component/cart-component.component.html
+++ b/src/app/cart-component/cart-component.component.html
@@ -17,7 +17,7 @@
             <img src={{item.productImage}} class="product_image">
             <div class="button_main_div">
                 <div class="buynow_button_div">
-                    <button class="buynow_button">Buy
+                    <button class="buynow_button" routerLink="/address">Buy
                         Now</button>
 
                 </div>
