--- a/src/app/sub-product/sub-product.component.css
+++ b/src/app/sub-product/sub-product.component.css
@@ -23,7 +23,7 @@
 
 .name_cart_logout_div{
   width: 100vw; 
-  height: 6.5%;
+  height: 60px;
   background-color: rgb(99, 99, 168);
   text-align: center;
   overflow-y: hidden;
