--- a/src/app/address/address.component.html
+++ b/src/app/address/address.component.html
@@ -39,7 +39,7 @@
     </div>
     <div class="button_div">
         <div class="button_inner_div">
-            <button class="proceed_to_buy_button">Proceed To Buy</button>
+            <button class="proceed_to_buy_button" (click)="proceedTOBuy()">Proceed To Buy</button>
             <button class="go_to_cart_button" routerLink="/cart">Go To Cart</button>
         </div>
         
