--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -4,18 +4,16 @@
             (click)="backToProductPage()">
     </div>
     <div class="header_div">
-
-
         <mat-icon class="cart_icon" routerLink="/cart">shopping_cart</mat-icon>
         <button type="button" class="logout_button" (click)="logout()">Logout</button>
     </div>
-    <div style="width: 40%;max-height: 40%;margin-left: 30%;display: flex;justify-content: center;">
+    <div class="image_upper_div">
         <div (mouseover)="showArrow()" (mouseleave)="hiddenarrow()">
-            <img src={{imageName}} style="max-width: 300px;margin-top: 10px;">
-            <mat-icon style="transform: scale(4.6);color: orange;margin-left: -29px;" *ngIf="arrowShow"
+            <img src={{imageName}} class="image">
+            <!-- <mat-icon style="transform: scale(4.6);color: orange;margin-left: -29px;" *ngIf="arrowShow"
                 (click)="getNextImage()">keyboard_arrow_right</mat-icon>
-            <mat-icon style="transform: scale(4.6);color: orange;margin-left: -50.4%;margin-top: 10px;"
-                *ngIf="arrowShow" (click)="getPreviousImage()">keyboard_arrow_left</mat-icon>
+            <mat-icon style="transform: scale(4.6);color: orange;margin-left: -60%;margin-top: 10px;"
+                *ngIf="arrowShow" (click)="getPreviousImage()">keyboard_arrow_left</mat-icon> -->
 
         </div>
         <!-- <div style="margin-top: -62%;margin-left: 75%;">
@@ -28,21 +26,20 @@
 
 
     </div>
-    <div style="display: flex; justify-content: center;margin-top: 10px;">
+    <div class="product_name_div">
         <h3 style="font-size: 30px;">{{productName}}</h3>
 
     </div>
-    <div style="display: flex; justify-content: center;">
+    <div class="price_div">
         <h2>Price: ₹{{price}}</h2>
     </div>
-    <div style="display: flex; flex-direction: row;justify-content: center;margin-top: 10px;">
-        <button style="height: 45px;font-size: 20px;background-color: salmon;border-radius: 10px;width: 250px;"
-            (click)="addToCart()">
+    <div class="cart_button_div">
+        <button class="add_cart_button" (click)="addToCart()">
             <mat-icon>add_shopping_cart</mat-icon>Add To Cart</button>
 
     </div>
-    <div style="display: flex;margin-top: 10px;justify-content: center;">
-        <button style="height: 45px;font-size: 20px;background-color: salmon;border-radius: 10px;width: 150px;">
+    <div class="buy_now_button_div">
+        <button class="buy_now_button" (click)="buyNow()">
             <mat-icon> monetization_on</mat-icon>Buy Now</button>
     </div>
 
