--- a/src/app/login/login-component/login-component.component.html
+++ b/src/app/login/login-component/login-component.component.html
@@ -13,7 +13,7 @@
                 style="width: 300px; background-color: transparent; border-top: none; border-left: none; border-right: none; height: 40px; color: black;font-size: 15px; margin-top: 30px; outline: none;border-bottom: 2px solid #1a1a1d;"
                 placeholder="Password" #password="ngModel" [(ngModel)]="userLogin.password" name="password">
             <button
-                style="margin-top: 30px; width: 70px; height: 40px; font-size: 20px; margin-left: 110px; background-color: blue; border-radius: 5px;"
+                style="margin-top: 30px; width: 70px; height: 40px; font-size: 20px; margin-left: 110px; background-color: blue; border-radius: 5px;color: white;"
                 (click)="login()">Login</button>
             <h3 style="margin-top: 15px; margin-left: 80px;"><a routerLink="/forgetPassword">Forget Password?</a></h3>
             <h3 style="margin-top: 0px; margin-left: 50px;">For Registration <a routerLink="/registration">Click
