--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -57,13 +57,19 @@
     padding: 30px;
 }
 
+
+
 .item_data_div_main{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 30px;   
     align-items: center;
     margin: 50px;
+}
+.item_data_div_main:hover{
+    box-shadow: 0 0 20px rgba(33,33,33,.2); 
+    border-radius: 60px;
 }
 
 .item_image{
