--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -84,6 +84,11 @@
     margin: 30px;
 }
 
+.product_inner_div:hover{
+    box-shadow: 0 0 20px rgba(33,33,33,.2); 
+    border-radius: 40px;
+  }
+
 .three_dot_button_div {
     margin-left: 90%
 }
