--- a/src/app/sub-product/sub-product.component.html
+++ b/src/app/sub-product/sub-product.component.html
@@ -6,11 +6,23 @@
     <div class="name_cart_logout_div">
 
         <h1 class="product_heading"><b><i>{{parentProductName}}</i></b></h1>
-        <mat-icon class="maticon_cart" routerLink="/cart">shopping_cart</mat-icon>
+        <!-- <mat-icon class="maticon_cart" routerLink="/cart">shopping_cart</mat-icon>
         <button type="button" class="btn btn-warning" style="float: right;margin-top: -45px;margin-right: 60px;"
             (click)="logout()">Logout</button>
         <button type="button" class="btn btn-warning" style="float: right;margin-top: -45px;margin-right: 160px;"
-            routerLink="/dashboard">Home</button>
+            routerLink="/dashboard">Home</button> -->
+            <div class="menu_button">
+                <button mat-mini-fab color="primary" aria-label="Example icon button with a menu icon"
+                    [matMenuTriggerFor]="menu">
+                    <mat-icon>menu</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item routerLink="/orderPage">Orders</button>
+                    <button mat-menu-item routerLink="/cart">Cart</button>
+                    <button mat-menu-item routerLink="/dashboard">Dashboard</button>
+                    <button mat-menu-item (click)="logout()">Logout</button>
+                </mat-menu>
+            </div>
     </div>
     <div *ngIf="addButton">
         <button class="add_new_button" (click)="addSubProduct()">+Add New</button>
