--- a/src/app/product-page/product-page.component.css
+++ b/src/app/product-page/product-page.component.css
@@ -94,3 +94,10 @@
     border-radius: 10px;
     width: 150px;
 }
+
+.menu_button{
+    margin-top: -50px;
+    margin-left: 90px;
+    float: right;
+    margin-right: 80px;
+  }
