--- a/src/app/cart-component/cart-component.component.css
+++ b/src/app/cart-component/cart-component.component.css
@@ -19,11 +19,10 @@
 }
 
 .dashboard_logout_button {
-    margin-top: -47px;
-    margin-left: -90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    margin-top: -45px;
+    margin-left: 90px;
+    float: right;
+    margin-right: 80px;
 }
 
 .dashboard_button {
