--- a/src/app/order-page/order-page.component.css
+++ b/src/app/order-page/order-page.component.css
@@ -29,17 +29,16 @@
 }
 
 .dashboard_logout_button {
-    margin-top: -47px;
-    margin-left: -90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    margin-top: -45px;
+    margin-left: 90px;
+    float: right;
+    margin-right: 80px;
 }
 
 .product_details_div{
     display: flex;
     flex-direction: row;
-    max-height: 190px;
+    max-height: 220px;
     margin-left: 70px;
 }
 
@@ -50,7 +49,7 @@
 }
 .margin_div{
     
-    margin-top: -16px;
+    margin-top: -10px;
 }
 .margin{
     width: 100vw;   
@@ -63,4 +62,16 @@
 }
 .help_link{
     margin-top: -7px;
+}
+
+.track_cancel_button{
+    float: right;
+}
+
+.cancel_order_button{
+    margin-left: 10px;
+}
+
+.modal-title{
+    font-size: 20px;
 }
