--- a/src/app/order-page/order-page.component.html
+++ b/src/app/order-page/order-page.component.html
@@ -29,9 +29,40 @@
                 <h3 style="margin-top: -13px;"><b>Expected Delivery:</b> {{item.expectedDelivered}}</h3>
                 <h4 style="margin-top: -13px;"><b>Delivered To:</b> {{item.deliveredTo}}</h4>
                 <p style="margin-top: -13px;"><b>Payment Mode:</b> Cash On Delivery</p>
-                <p style="margin-top: -8px;"><b>Status: </b>Placed</p>
-                <a class="help_link" routerLink="" (click)="navigateToHelpPage()"><p>Need Help?</p></a>
+                <div *ngIf="item.orderStatus!='ORDER_CANCELLED_BY_USER'; else something">
+                    <p style="margin-top: -8px;"><b>Status: </b>{{item.orderStatus}}</p>
+                </div>
+                <ng-template #something>
+                    <p style="margin-top: -8px; color: red;"><b>Status: </b>{{item.orderStatus}}</p>
+                </ng-template>
+                <!-- <a class="help_link" routerLink="" (click)="navigateToHelpPage()"><p>Need Help?</p></a> -->
+                <div class="track_cancel_button">
+                    <button mat-raised-button color="primary">Track Order</button>
+                    <button mat-raised-button color="warn" class="cancel_order_button" (click)="openPopup(item)">Cancel
+                        Order</button>
+                    <!-- Modal -->
+                    <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Are you sure want to cancel the order??</h4>
+                                </div>
+
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-primary" style="width: 80px;"
+                                        (click)="cancelOrder(item)">Yes</button>
+                                    <button type="button" class="btn btn-danger" (click)="closePopup()"
+                                        style="width: 80px;">
+                                        No
+                                    </button>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
         <div class="margin_div">
             <hr class="margin">
