--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -134,3 +134,11 @@
     width: 220px;
     margin-left: 2%;
 }
+
+.menu_button{
+    margin-top: -58px;
+    margin-left: 90px;
+    float: right;
+    margin-right: 80px;
+  }
+  
