--- a/src/app/subproductform/subproductform.component.css
+++ b/src/app/subproductform/subproductform.component.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     background-color: #E8A87C;
-    height: 43%;
+    max-height: 69%;
     border-radius: 20px;
     box-shadow: 4px 10px 4px gray;
     padding: 30px;
